--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -190,7 +190,7 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Sch
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{
-Morality is central to social life, moral character is the center of morality. Researchers had long assumed moral character information is prioritized in perceptual process, yet the evidence is scarce. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching. Participants first learned the association between moral characters (labels) and visual cues (shapes), then performed a shape-label perceptual matching task. The results revealed that shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. This effect was robust after changing the words for label or using diagnostic behavioral as an proxy of mroal character. Also, this pattern was robust when changing simultaneous presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization versus social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good character effect was strong when it refers to the self but weak or non-exist when it refers to a stranger. In further experiments where identity or moral character information were presented as task-irrelevant stimuli, we found that participants cared about the character when identity information is salient and valance information is irrelevant, but when valence information is task-relevant but not identity information, participants cared more about the good character's identity than the neutral or bad character. Together, these results suggested that people are senstive to who is the good character, but less sensitive to who is the neutral or bad character. When the identity information is ambiguous, people may spontaneously referring the good character as self. These results added new evidence for the social vision and suggested the advantage of good character depends on the self-relevance.
+Morality is central to social life, moral character is central to morality. Researchers assume that moral character information is prioritized in perceptual process, yet the evidence is scarce. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching. Participants first learned the association between moral characters (labels) and visual cues (shapes), then performed a shape-label perceptual matching task. The results revealed that shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. This effect was robust after changing the words for label or using diagnostic behavioral as an proxy of mroal character. Also, this pattern was robust when changing simultaneous presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization versus social-categorization based prioritization. We manipulated the identity of moral character explicitly and found that good character effect was strong when it refers to the self but weak or non-exist when it refers to a stranger. In further experiments where both identity or moral character information were presented but only one of them served as task-relevant stimuli, we found that task-irrelevant good character facilitate response to self but slow down the response to stranger and that task-irrelevant self-referntial information facilitated response to good character but task-irrlevant stranger-referential information slowed down response to good character. Together, these results suggested that people are senstive to who is the good character, but less sensitive to who is the neutral or bad character. When the identity information is ambiguous, people may spontaneously referring the good character as self. These results added new evidence for the social vision and suggested the advantage of good character depends on the self-relevance.
 }
 
 
@@ -265,11 +265,11 @@ All participant received informed consent and compensated for their time. These 
 
 This series of experiments studied the perceptual process of moral character, using the social associative learning paradigm (or tagging paradigm)(Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
 
-The experiment 1a, 1b, 1c, 2, 5, and 6a shared a 2 (matching: match vs.~nonmatch) by 3 (moral character: good vs.~neutral vs.~bad person) within-subject design. Experiment 1a was the first one of the whole series studies and found the prioritization of stimuli associated with good-person. To confirm that it is the moral character that caused the effect, we further conducted experiment 1b, 1c, and 2. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with certain words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 5 was designed to compare the effect size of moral character and other importance social evaluative dimensions (aesthetics and emotion). In experiment 5 different social evaluative dimensions were implemented in different block, thus the moral character blocks shared the design of experiment 1a. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
+The experiment 1a, 1b, 1c, 2, 5, and 6a shared a 2 (matching: match vs.~nonmatch) by 3 (moral character: good vs.~neutral vs.~bad person) within-subject design. Experiment 1a was the first one of the whole series studies and found the prioritization of stimuli associated with good-person. To confirm that it is the moral character that caused the effect, we further conducted experiment 1b, 1c, and 2. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with certain words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 5 was designed to compare the effect size of moral character and other importance social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, the moral character blocks shared the design of experiment 1a. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
 
 For experiment 3a, 3b, and 6b, we included self-reference as another within-subject variable in the experimental design. For example, the experiment 3a directly extend the design of experiment 1a into a 2 (matching: match vs.~nonmatch) by 2 (reference: self vs.~other) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design. Thus in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). The experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b were conducted in two days: the first day participants finished perceptual matching task as a practice, and the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different types of block: in the self-referential blocks, they only responded to good-self, neutral-self, and bad-self, with half match trials and half nonmatch trials; in the other-reference blocks, they only responded to good-other, neutral-other, and bad-other.
 
-Experiment 4a and 4b were design to explore the mechanism behind the prioritization of good-self. In 4a, we only used two labels (self vs.~other) and two shapes (circle, square). To manipulate the moral character, we added the moral-related words within the shape and instructed participants to ignore the words in the shape during the task. In 4b, we reversed the role of self-reference and moral character in the task: participant learned three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle), and the words related to identity, ``self'' or ``other,'' were presented in the shapes. As in 4a, participants were told to ignore the words inside the shape during the task.
+Experiment 4a and 4b were design to explore the mechanism underlying the prioritization of good-self. In 4a, we only used two labels (self vs.~other) and two shapes (circle, square). To manipulate the moral character, we added the moral-related words within the shape and instructed participants to ignore the words in the shape during the task. In 4b, we reversed the role of self-reference and moral character in the task: participant learned three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle), and the words related to identity, ``self'' or ``other,'' were presented in the shapes. As in 4a, participants were told to ignore the words inside the shape during the task.
 
 E-prime 2.0 was used for presenting stimuli and collecting behavioral responses. For participants recruited in Tsinghua University, they finished the experiment individually in a dim-lighted chamber, stimuli were presented on 22-inch CRT monitors and their head were fixed by a chin-rest brace. The distance between participants' eyes and the screen was about 60 cm. The visual angle of geometric shapes was about \(3.7^\circ × 3.7^\circ\), the fixation cross is of \(0.8^\circ × 0.8^\circ\) visual angle at the center of the screen. The words were of \(3.6^\circ\) × \(1.6^\circ\) visual angle. The distance between the center of the shape or the word and the fixation cross was \(3.5^\circ\) of visual angle. For participants recruited in Wenzhou University, they finished the experiment in a group consisted of 3 \textasciitilde{} 12 participants in a dim-lighted testing room. Participants were required to finished the whole experiment independently. Also, they were instructed to start the experiment at the same time, so that the distraction between participants were minimized. The stimuli were presented on 19-inch CRT monitor. The visual angles are could not be exactly controlled because participants' chin were not fixed.
 
@@ -280,17 +280,14 @@ In most of these experiments, participant were also asked to fill a battery of q
 
 We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to preprocess the data. Results of each experiment were then analyzed using Bayesian hierarchical models.
 
-\hypertarget{bayesian-hierarchical-model}{%
-\paragraph{Bayesian hierarchical model}\label{bayesian-hierarchical-model}}
+We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data, because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests): first, BHM estimate the posterior distributions of parameters for statistical inference, therefore provided uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide better fitting of the data. For example, Reaction times are not normally distributed but right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2019). Third, BHM provided an unified framework to analyze data from different levels and different sources, avoid the information loss when we need to combine data from different levels.
 
-We first tested the effect of experimental manipulation using Bayesian hierarchical model. More specifically, we used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data. We used Bayesian hierarchical model because it provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests): first, BHM estimate the posterior distributions of parameters for statistical inference, therefore provided uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, as generalized linear mixed models, can use distribution that fit the distribution of real data instead of using normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide better fitting of the data. For example, Reaction times are not normally distributed but right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2019). Third, BHM provided an unified framework to analyze data from different levels and different sources, avoid the information loss when we need to combine data from different levels.
-
-We first used the \texttt{r} package \texttt{BRMs} (Bürkner, 2017), which used Stan (Carpenter et al., 2017) to sample from the posterior, to build the model for RTs and accuracy separately. Using the Bayesian hierarchical model, we can directly estimate the over-all effect across similar experiments with similar experimental design, instead of using a two-step approach where we first estimate parameters, e.g., \(d'\) for each participant, and then use a random effect model meta-analysis to synthesize the effect (Goh, Hall, \& Rosenthal, 2016). We also we used HDDM to model RTs and accuracy data together using drift diffusion model as the data generative model.
+We used the \texttt{r} package \texttt{BRMs} (Bürkner, 2017), which used Stan (Carpenter et al., 2017) for the BHM analyses. We estimated the over-all effect across experiments with similar experimental design, instead of using a two-step approach where we first estimate parameters, e.g., \(d'\) for each participant, and then use a random effect model meta-analysis to synthesize the effect (Goh, Hall, \& Rosenthal, 2016).
 
 \hypertarget{accuracy}{%
-\subparagraph{Accuracy}\label{accuracy}}
+\subsubsection{Accuracy}\label{accuracy}}
 
-We followed practice of previous studies (Hu, Lan, Macrae, \& Sui, 2020; Sui, He, \& Humphreys, 2012) and used signal detection theory approach to analyze the accuracy data. More specifically, the match trials are treated as signal and the non-match trials are noise. As we mentioned above, we estimated the sensitivity and criterion of SDT by BHM (Rouder \& Lu, 2005). Because the BHM can model different level's data using a single unified model, we used a three-level HBM to model the valence effect, which include five experiments: 1a, 1b, 1c, 2, 5, and 6a. Also, we modelled the experiments with both identity and moral valence with a three-level HBM model, which includes 3a, 3b, and 6b. For experiment 4a and 4b, we used two-level models for each separately. However, we could compare the posterior of parameters directly because we have full posterior distribution of parameters.
+We followed practice of previous studies (Hu, Lan, Macrae, \& Sui, 2020; Sui, He, \& Humphreys, 2012) and used signal detection theory approach to analyze the accuracy data. More specifically, the match trials are treated as signal and the non-match trials are noise. As we mentioned above, we estimated the sensitivity and criterion of SDT by BHM (Rouder \& Lu, 2005). Because the BHM can model different level's data using a single unified model, we used a three-level HBM to model the moral character effect, which include five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, we modeled experiments with both self-referential and moral character with a three-level HBM model, which includes 3a, 3b, and 6b. For experiment 4a and 4b, we used two-level models for each separately. However, we could compare the posterior of parameters directly because we have full posterior distribution of parameters.
 
 We used the Bernoulli distribution to model the accuracy data. For a single participant, we assume that the accuracy of \(i\)th trial is Bernoulli distributed (binomial with 1 trial), with probability \(p_{i}\) that \(y_{i} = 1\).
 
@@ -300,11 +297,11 @@ and the probability of choosing ``match'' \(p_{i}\) at the \(i\)th trial is a fu
 \[ \Phi(p_{i}) =  \beta_{0} + \beta_{1}IsMatch_{i}\]
 therefore, the outcomes \(y_{i}\) are 0 if the participant responded ``nonmatch'' on the \(i\)th trial, 1 if they responded ``match.'' We then write the generalized linear model on the probits (z-scores; \(\Phi\), ``Phi'') of \(p\)s. \(\Phi\) is the cumulative normal density function and maps \(z\) scores to probabilities. In this way, the intercept of the model (\(\beta_0\)) is the standardized false alarm rate (probability of saying 1 when predictor is 0), which we take as our criterion \(c\). The slope of the model (\(\beta_1\)) is the increased probability of responding ``match'' when the trial type is ``match,'' in \(z\)-scores, which is another expression of \(d'\). Therefore, \(c\) = -\(z\)HR = \(-\beta_0\), and \(d' = \beta_1\).
 
-In our experimental design, there are three conditions for both match and non-match trials, we can estimate the \(d'\) and \(c\) separately for each condition. In this case, the criterion \(c\) is modeled as the main effect of valence, and the \(d'\) can be modeled as the interaction between valence and match, and we explicitly removed the intercept:
+In our experimental design, there are three conditions for both match and non-match trials, we can estimate the \(d'\) and \(c\) separately for each condition. In this case, the criterion \(c\) is modeled as the main effect of valence, and the \(d'\) can be modeled as the interaction between valence and match:
 
 \[ \Phi(p_{i}) = 0 + \beta_{0}Valence_{i} + \beta_{1}IsMatch_{i}  * Valence_{i} \]
 
-In each experiment, we had multiple participants. We can estimate the group-level parameters by extending the above model into a two-leve model, where we can estimate parameters on individual level and the group level parameter simultaneously. The probability that the \(j\)th subject responded ``match'' (\(y_{ij} = 1\)) at the \(i\)th trial \(p_{ij}\). In the same vein, we have
+In each experiment, we had multiple participants. We can estimate the group-level parameters by extending the above model into a two-level model, where we can estimate parameters on individual level (varying effect) and the group level parameter simultaneously (fixed effect). The probability that the \(j\)th subject responded ``match'' (\(y_{ij} = 1\)) at the \(i\)th trial \(p_{ij}\). In the same vein, we have
 
 \[ y_{ij} \sim Bernoulli(p_{ij})\]
 The the generalized linear model can be re-written to include two levels:
@@ -330,7 +327,7 @@ In the same vein, we can estimate the posterior of parameters across different e
 \[y_{ijk} \sim Bernoulli(p_{ijk})\]
 the generalized linear model is then
 \[ \Phi(p_{ijk}) =  0 + \beta_{0jk}Valence_{ijk} + \beta_{1j}IsMatch_{ijk} * Valence_{ijk}\]
-The outcomes \(y_{ijk}\) are 0 if participant \(j\) in experiment k responded ``mismatch'' on trial \(i\), 1 if they responded ``match.''
+The outcomes \(y_{ijk}\) are 0 if participant \(j\) in experiment k responded ``nonmatch'' on trial \(i\), 1 if they responded ``match.''
 
 \[\begin{bmatrix}\beta_{0jk}\\
 \beta_{1jk}\\
@@ -381,31 +378,26 @@ we expanded the RT model three-level model in which participants and experiments
 \[\theta_{k} \sim Cauchy()\]
 
 \hypertarget{effect-of-moral-character}{%
-\subparagraph{Effect of moral character}\label{effect-of-moral-character}}
+\subsubsection{Effect of moral character}\label{effect-of-moral-character}}
 
-We synthesized effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5, and 6a for the effect of moral character. We reported the synthesized the effect across all experiments that tested the valence effect, using the mini meta-analysis approach (Goh, Hall, \& Rosenthal, 2016).
+We estimated the effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5, and 6a for the effect of moral character. We reported fixed effect of three-level BHM that included all experiments that tested the valence effect.
 
-\hypertarget{effect-of-moral-self}{%
-\subparagraph{Effect of moral self}\label{effect-of-moral-self}}
+\hypertarget{interaction-between-moral-character-and-self-referential-process}{%
+\subsubsection{Interaction between moral character and self-referential process}\label{interaction-between-moral-character-and-self-referential-process}}
 
-We further synthesized the effect of moral self, which included results from experiment 3a, 3b, and 6b. In these experiment, we directly tested two possible explanations: moral self as social categorization process and value-based attention.
+We also estimated the interaction between moral character and self-referential process, which included results from experiment 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: value-based or social categorization based prioritization.
 
 \hypertarget{implicit-interaction-between-valence-and-self-relevance}{%
-\subparagraph{Implicit interaction between valence and self-relevance}\label{implicit-interaction-between-valence-and-self-relevance}}
+\subsubsection{Implicit interaction between valence and self-relevance}\label{implicit-interaction-between-valence-and-self-relevance}}
 
-In the third part, we focused on experiment 4a and 4b, which were designed to examine two more nuanced explanation concerning the good-self. The design of experiment 4a and 4b are complementary. Together, they can test whether participants are more sensitive to the moral character of the Self (4a), or the identity of the morally Good (4b).
+In the third part, we focused on experiment 4a and 4b, which were designed to examine two more nuanced explanation concerning the good-self. The design of experiment 4a and 4b are complementary. Together, they can test whether participants are more sensitive to the moral character of the Self (4a), or the identity of the good character (4b).
 
 For the questionnaire part, we are most interested in the self-rated distance between different person and self-evaluation related questionnaires: self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included. Note that all questionnaire data were reported in (Liu et al., 2020).
-
-\hypertarget{hierarchical-drift-diffusion-model-hddm}{%
-\paragraph{Hierarchical drift diffusion model (HDDM)}\label{hierarchical-drift-diffusion-model-hddm}}
-
-To further explore the psychological mechanism under perceptual decision-making, we used a generative mode, drift diffusion model (DDM), to model our RTs and accuracy data. As the hypothesis testing part, we also used hierarchical Bayesian model to fit the DDM. The package we used was the HDDM (Wiecki, Sofer, \& Frank, 2013), a python package for fitting hierarchical DDM. We used the prior implemented in HDDM, that is, weakly informative priors that constrains parameter estimates to be in the range of plausible values based on past literature (Matzke \& Wagenmakers, 2009). As reported in Hu, Lan, Macrae, and Sui (2020), we used the stimulus code approach, match response were coded as 1 and nonmatch responses were coded as 0. To fully explore all parameters, we allow all four parameters of DDM free to vary. We then extracted the estimation of all the four parameters for each participants for the correlation analyses. However, because the starting point is only related to response (match vs.~non-match) but not the valence of the stimuli, we didn't included it in correlation analysis.
 
 \hypertarget{part-1-perceptual-processing-moral-character-related-information}{%
 \section{Part 1: Perceptual processing moral character related information}\label{part-1-perceptual-processing-moral-character-related-information}}
 
-In this part, we report results from five experiments that tested whether an associative learning task, including 192 participants. Note that for both experiment 1a and 1b, there were two independent samples with different equipment, trials numbers and testing situation. Therefore, we modeled them as independent samples. These five experiments revealed a robust effect of moral character on perceptual matching task.
+In this part, we report results from five experiments that tested whether an associative learning task, including 192 participants. Note that for both experiment 1a and 1b, there were two independent samples with different equipment, trials numbers and testing situations. Therefore, we modeled them as independent samples. These five experiments revealed a robust effect of moral character on perceptual matching task.
 
 \begin{figure}
 \centering
@@ -413,31 +405,30 @@ In this part, we report results from five experiments that tested whether an ass
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral valence on RT and d'}
 \end{figure}
 
-For the \emph{d} prime, we found robust effect of moral valence. Shapes associated with positive moral valence (``good person,'' ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ), but we did not find differences between shapes associated with negative moral label (mean = , 95\% HDI = ) and neutral condition.
+For the \emph{d} prime, we found robust effect of moral character. Shapes associated with good character (``good person,'' ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ), but we did not find differences between shapes associated with negative moral label (mean = , 95\% HDI = ) and neutral condition.
 
-For the reaction times, we also found robust effect of moral valence. Shapes associated with positive moral valence has faster responses (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ). We also found that the responses to shapes associated with negative moral valence (mean = , 95\% HDI = ) were slower as compared to the neutral condition. See Figure \ref{fig:plot-bayes-meta-1}.
+For the reaction times, we also found robust effect of moral character. Shapes associated with good character has faster responses (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ). We also found that the responses to shapes associated with negative moral valence (mean = , 95\% HDI = ) were slower as compared to the neutral condition. See Figure \ref{fig:plot-bayes-meta-1}.
 
 \hypertarget{part-2-interaction-between-valence-and-identity}{%
 \section{Part 2: interaction between valence and identity}\label{part-2-interaction-between-valence-and-identity}}
 
 In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included data from 108 participants.
 
-\begin{figure}
-\centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes2-1.pdf}
-\caption{\label{fig:plot-bayes2}Interaction between moral valence and self-referential}
-\end{figure}
+For the \emph{d} prime, we found that moral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (mean\_\{diff\} = ; 95\% HDI = {[}{]}), \emph{d} prime for good-self was also greater than good-other condition (mean\_\{diff\} = ; 95\% HDI = {[}{]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D). However, when comparing self- and other-referential on neutral and bad conditions, the \emph{d} prime was greater for other-referential conditions than self-referential conditions.
 
-See Figure \ref{fig:plot-bayes2}.
+For the RTs part, we also found good-self prioritization effect, both compared with neutral-self () and good-other () conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
 
 \hypertarget{part-3-implicit-binding-between-valence-and-identity}{%
 \section{Part 3: Implicit binding between valence and identity}\label{part-3-implicit-binding-between-valence-and-identity}}
 
-In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance will eliminate the effect observed in previous experiment.
+In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance modulated the effect observed in previous experiment.
 
 For the task relevant part, we found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
 
 Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. In contrast the \emph{d} prime was smaller when shapes were associated with good other than with neutral other or bad other. See Figure \ref{fig:plot-exp4-all}.
+
+The same pattern was found for RTs. For self-referntial condition, when good character was presented as a task-irrelevant stimuli, the responds were facilitated. This effect was reversed for other-referential condition.
 
 \begin{figure}
 \centering
@@ -447,7 +438,7 @@ Most importantly, we found evidence, albeit weak, that task-irrelevant moral val
 
 In this task, we found shapes associated with good person conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
 
-Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside as task-irrelevant stimuli than with ``other'' inside (mean\_diff = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (mean\_diff = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (mean\_diff = -.05, 95\% CI{[}-.18, .09{]}). The same trend appear for the RT data. For shapes associated with good person, an ``self'' inside will reduce the RTs as compared with when a ``other'' inside the shape (mean\_diff = -55 ms, 95\%CI{[}-75, -35{]}, p \textless{} 0.0001), but this effect did not occur when the shapes were associated neutral (mean\_dfiff = 10, 95\% CI {[}1, 20{]}) or bad (mean\_diff = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
+Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside as task-irrelevant stimuli than with ``other'' inside (\(mean_{dfiff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (\(mean_{dfiff}\) = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (\(mean_{dfiff}\) = -.05, 95\% CI{[}-.18, .09{]}). The same trend appear for the RT data. For shapes associated with good person, an ``self'' inside will reduce the RTs as compared with when a ``other'' inside the shape (\(mean_{dfiff}\) = -55 ms, 95\%CI{[}-75, -35{]}, p \textless{} 0.0001), but this effect did not occur when the shapes were associated neutral (\(mean_{dfiff}\) = 10, 95\% CI {[}1, 20{]}) or bad (\(mean_{dfiff}\) = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{self-reported-personal-distance}{%
 \subsection{Self-reported personal distance}\label{self-reported-personal-distance}}
@@ -473,6 +464,14 @@ We also explored the correlation between behavioral data and questionnaire score
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
+
+In a series of experiments, we found that (1) good character are prioritized in perceptual matching task; (2) this effect was robust when moral characters are self-referential but not stranger-referential; (3) the self-good character combination, whether task-relevant or not, facilitate the process but other-good character combination didn't have this effect, if not reverse. The self-reported mental distance scale also showed that people rated self has longer distance to bad character.
+
+{[}direct evidence for moral character in perception{]}
+
+{[}Value-based attention?{]}
+
+{[}Good-self effect{]}
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -564,9 +563,6 @@ Hu, C.-P., Lan, Y., Macrae, C. N., \& Sui, J. (2020). Good me bad me: Does valen
 \leavevmode\hypertarget{ref-Liu_2020_JOPD}{}%
 Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnaire data from the revision of a chinese version of free will and determinism plus scale {[}Journal Article{]}. \emph{Journal of Open Psychology Data}, \emph{8}(1), 1. \url{https://doi.org/10.5334/jopd.49/}
 
-\leavevmode\hypertarget{ref-matzke_psychological_2009}{}%
-Matzke, D., \& Wagenmakers, E.-J. (2009). Psychological interpretation of the ex-gaussian and shifted wald parameters: A diffusion model analysis. \emph{Psychonomic Bulletin \& Review}, \emph{16}(5), 798--817. \url{https://doi.org/10.3758/PBR.16.5.798}
-
 \leavevmode\hypertarget{ref-mchugh_moral_2019}{}%
 McHugh, C., McGann, M., Igou, E. R., \& Kinsella, E. (2019). \emph{Moral judgment as categorization ({MJAC})}. {PsyArXiv}. \url{https://doi.org/10.31234/osf.io/72dzp}
 
@@ -626,9 +622,6 @@ Uhlmann, E. L., Pizarro, D. A., \& Diermeier, D. (2015). A person-centered appro
 
 \leavevmode\hypertarget{ref-vanneste_attention_2007}{}%
 Vanneste, S., Verplaetse, J., Van Hiel, A., \& Braeckman, J. (2007). Attention bias toward noncooperative people. A dot probe classification study in cheating detection. \emph{Evolution and Human Behavior}, \emph{28}(4), 272--276. \url{https://doi.org/10.1016/j.evolhumbehav.2007.02.005}
-
-\leavevmode\hypertarget{ref-wiecki_hddm_2013}{}%
-Wiecki, T. V., Sofer, I., \& Frank, M. J. (2013). {HDDM}: Hierarchical bayesian estimation of the drift-diffusion model in python. \emph{Frontiers in Neuroinformatics}, \emph{7}. \url{https://doi.org/10.3389/fninf.2013.00014}
 
 \leavevmode\hypertarget{ref-xiao_perceiving_2016}{}%
 Xiao, Y. J., Coppin, G., \& Bavel, J. J. V. (2016). Perceiving the world through group-colored glasses: A perceptual model of intergroup relations. \emph{Psychological Inquiry}, \emph{27}(4), 255--274. \url{https://doi.org/10.1080/1047840X.2016.1199221}
