--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -394,8 +394,11 @@ In the third part, we focused on experiment 4a and 4b, which were designed to ex
 
 For the questionnaire part, we are most interested in the self-rated distance between different person and self-evaluation related questionnaires: self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included. Note that all questionnaire data were reported in (Liu et al., 2020).
 
-\hypertarget{part-1-perceptual-processing-moral-character-related-information}{%
-\section{Part 1: Perceptual processing moral character related information}\label{part-1-perceptual-processing-moral-character-related-information}}
+\hypertarget{results}{%
+\section{Results}\label{results}}
+
+\hypertarget{perceptual-processing-moral-character-related-information}{%
+\subsection{Perceptual processing moral character related information}\label{perceptual-processing-moral-character-related-information}}
 
 In this part, we report results from five experiments that tested whether an associative learning task, including 192 participants. Note that for both experiment 1a and 1b, there were two independent samples with different equipment, trials numbers and testing situations. Therefore, we modeled them as independent samples. These five experiments revealed a robust effect of moral character on perceptual matching task.
 
@@ -405,22 +408,29 @@ In this part, we report results from five experiments that tested whether an ass
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral valence on RT and d'}
 \end{figure}
 
-For the \emph{d} prime, we found robust effect of moral character. Shapes associated with good character (``good person,'' ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ), but we did not find differences between shapes associated with negative moral label (mean = , 95\% HDI = ) and neutral condition.
+For the \emph{d} prime, we found robust effect of moral character. Shapes associated with good character (``good person,'' ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (median = 2.49, 95\% HDI = {[}2.19 2.75{]}) than shapes associated with neutral character (median = 2.18, 95\% HDI = {[}1.90 2.48{]}), but we did not find differences between shapes associated with bad character (median = 2.23, 95\% HDI = {[}1.94 2.53{]}) and neutral character
 
-For the reaction times, we also found robust effect of moral character. Shapes associated with good character has faster responses (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ). We also found that the responses to shapes associated with negative moral valence (mean = , 95\% HDI = ) were slower as compared to the neutral condition. See Figure \ref{fig:plot-bayes-meta-1}.
+For the reaction times, we also found robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 578.64, 95\% HDI = {[}508.15 661.14{]}) than shapes associated with neutral character (median = 623.45, 95\% HDI = {[}547.98 708.24{]}). We also found that the responses to shapes associated with bad character (median = 640.41, 95\% HDI = {[}559.94 719.63{]}) were slower as compared to the neutral character See Figure \ref{fig:plot-bayes-meta-1}.
 
-\hypertarget{part-2-interaction-between-valence-and-identity}{%
-\section{Part 2: interaction between valence and identity}\label{part-2-interaction-between-valence-and-identity}}
+For the nonmatch trials, we also found the advantage of good character: Shapes associated with good character (median = 653.21, 95\% HDI = {[}574.65 739.57{]}) are faster than shapes associated with neutral (median = 671.14, 95\% HDI = {[}591.71 760.09{]}) or bad character (median = 676.35, 95\% HDI = {[}599.13 767.76{]}), but the effect size was smaller (\textbf{see supplementary materials}).
+
+\hypertarget{self-referential-process-modulate-prioritization-of-good-character}{%
+\subsection{Self-referential process modulate prioritization of good character}\label{self-referential-process-modulate-prioritization-of-good-character}}
 
 In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included data from 108 participants.
 
+\begin{figure}
+\centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes2-1.pdf}
+\caption{\label{fig:plot-bayes2}Interaction between moral valence and self-referential}
+\end{figure}
+
 For the \emph{d} prime, we found that moral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (mean\_\{diff\} = ; 95\% HDI = {[}{]}), \emph{d} prime for good-self was also greater than good-other condition (mean\_\{diff\} = ; 95\% HDI = {[}{]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D). However, when comparing self- and other-referential on neutral and bad conditions, the \emph{d} prime was greater for other-referential conditions than self-referential conditions.
 
 For the RTs part, we also found good-self prioritization effect, both compared with neutral-self () and good-other () conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
 
-\hypertarget{part-3-implicit-binding-between-valence-and-identity}{%
-\section{Part 3: Implicit binding between valence and identity}\label{part-3-implicit-binding-between-valence-and-identity}}
+\hypertarget{binding-the-good-and-self}{%
+\subsection{Binding the good and self}\label{binding-the-good-and-self}}
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance modulated the effect observed in previous experiment.
 
